[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phreeqc-batch"
version = "0.1.0"
authors = [{ name = "M. Stainoh" }]
description = "Structured PHREEQC workflows over python phreeqc bindings: template-based composition building, typed task execution, and batch processing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["phreeqc", "phreeqpy", "geochemistry", "brine", "hydrogeology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "phreeqpy>=0.2.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/mstainoh/phreeqc-batch"
Homepage = "https://github.com/mstainoh/phreeqc-batch"
Issues = "https://github.com/mstainoh/phreeqc-batch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phreeqc_batch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
